--- a/html/stocks.html
+++ b/html/stocks.html
@@ -138,7 +138,7 @@
         </section>
             <section>
             <div id="tekst_sverhu_kartinki">
-            <img class="reklama" src="../img/девушка.jpg" alt="Текст сверху картинки">
+            <img class="reklama" src="./img/девушка.jpg" alt="Текст сверху картинки">
             <div class="tekst_sverhu_kartinki">При первой покупке суши "Мегафиш" в подарок</div> <br>
             Напишите свой email
             <input class="button" type="text"><input class="submit" type="submit" value="Отправить">
