--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -13,10 +13,10 @@
         <div class="logo-main">
             <img class="logo" src="./img/logo.png" alt="logo">
         </div>
+        <header>
      <div class="header-wrapper">
-         <header>
             <div class="logo-loc">
-               <h1><font class="font1">АВТОР</font><font class="font2">СУШИ</font></h1><br>
+               <h1><font class="fontt">АВТОР</font><font class="font">СУШИ</font></h1><br>
                 </div>
                 8 (400) 755-00-21 <br>
                 <a href="https://www.facebook.com/Avtorsushi/"><img src="./img/fb.png" alt="fb"></a>
@@ -27,8 +27,8 @@
                 <a class="a-1" href="./html/popular.html">Популярные</a>
                 <a class="a-2" href="./html/new.html">Новинки</a>
                 </nav>
-            </div>
-    </header>
+           </header>
+        </div>
 </div>
 <body>
 <main>
