--- a/html/popular.html
+++ b/html/popular.html
@@ -12,10 +12,10 @@
         <div class="logo-main">
             <img class="logo" src="../img/logo.png" alt="logo">
         </div>
-     <div class="header-wrapper">
          <header>
+             <div class="header-wrapper">
             <div class="logo-loc">
-               <h1><font class="font1">АВТОР</font><font class="font2">СУШИ</font></h1><br>
+                <h1><span>АВТОР</span><font class="font">СУШИ</font></h1><br>
                     <nav class="nav-a">
                         <a href="../index.html">На главную</a>
                         <a class="a-1" href="../html/stocks.html">Акции</a>
@@ -51,9 +51,9 @@
         <p><input class="submit" type="submit" value="Заказать"></p>
     </div>
         </div>
-        <hr>
+        <hr class="hr1">
             <br>
-                <hr>
+                <hr class="hr2">
             <div class="sushi-wrapper"> 
         <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
             <img class="sushi" src="../img/Сет Ирония Судьбы.jpg" alt="">
