--- a/html/stocks.html
+++ b/html/stocks.html
@@ -48,6 +48,9 @@
             <p><input class="submit" type="submit" value="Заказать"></p>
          </div>
     </div>
+    <hr class="hr1">
+    <br>
+    <hr class="hr2">
     <div class="sushi-wrapper">
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
                 <img class="sushi" src="../img/Комбо набор Хрустальный.jpg" alt="">
@@ -135,7 +138,7 @@
             </p>
         </div>
     </div>
-        </section>
+</section>
 </main>
 </div>   
 </body>
