--- a/index.html
+++ b/index.html
@@ -1,35 +1,29 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="style icon" href="./img/logoo.jpg"> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="style icon" href="./img/logoo.jpg"> 
     <title>Автор суши - круглосуточно</title>
-    </head>
+</head>
     <div class="wrapper">
         <div class="logo-main">
             <img class="logo" src="./img/logo.png" alt="logo">
         </div>
-        <header>
-     <div class="header-wrapper">
+         <header>
+             <div class="header-wrapper">
             <div class="logo-loc">
-               <h1><font class="fontt">АВТОР</font><font class="font">СУШИ</font></h1><br>
+                <h1><span>АВТОР</span><font class="font">СУШИ</font></h1><br>
+                    <nav class="nav-a">
+                        <a href="./html/popular.html">Популярные</a>
+                        <a class="a-1" href="./html/stocks.html">Акции</a>
+                        <a class="a-2" href="./html/new.html">Новинки</a>
+                    </nav>
                 </div>
-                8 (400) 755-00-21 <br>
-                <a href="https://www.facebook.com/Avtorsushi/"><img src="./img/fb.png" alt="fb"></a>
-                <a href="https://vk.com/avtor_sushi"><img src="./img/vk.png" alt="vk"></a>
-                <a href="https://www.instagram.com/avtor_sushi/"><img src="./img/inst.png" alt=""></a>
-                <nav class="nav-a">
-                <a href="./html/stocks.html">Акции</a>
-                <a class="a-1" href="./html/popular.html">Популярные</a>
-                <a class="a-2" href="./html/new.html">Новинки</a>
-                </nav>
-           </header>
-        </div>
-</div>
+        </header>
+    </div>
 <body>
 <main>
     <section class="section-sushi">
