--- a/html/popular.html
+++ b/html/popular.html
@@ -15,7 +15,7 @@
          <header>
              <div class="header-wrapper">
             <div class="logo-loc">
-                <h1><span>АВТОР</span><font class="font">СУШИ</font></h1><br>
+                <h1><span>АВТОР</span><font>СУШИ</font></h1><br>
                     <nav class="nav-a">
                         <a href="../index.html">На главную</a>
                         <a class="a-1" href="../html/stocks.html">Акции</a>
