--- a/index.html
+++ b/index.html
@@ -8,50 +8,48 @@
     <link rel="style icon" href="./img/logoo.jpg"> 
     <title>Автор суши - круглосуточно</title>
 </head>
-    <div class="wrapper">
+    
         <div class="logo-main">
             <img class="logo" src="./img/logo.png" alt="logo">
         </div>
-         <header>
-             <div class="header-wrapper">
+<body>
+ <header>
             <div class="logo-loc">
-                <h1><span>АВТОР</span><font class="font">СУШИ</font></h1><br>
+                <h1><span>АВТОР</span><font>СУШИ</font></h1>
+                <br>
                     <nav class="nav-a">
                         <a href="./html/popular.html">Популярные</a>
                         <a class="a-1" href="./html/stocks.html">Акции</a>
                         <a class="a-2" href="./html/new.html">Новинки</a>
                     </nav>
                 </div>
-        </header>
-    </div>
-<body>
+        </header>   
 <main>
     <section class="section-sushi">
         <div>
         <div class="sushi-wrapper">
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-           <img class="sushi" src="./img/Калифорния креветка-тобико.jpg" alt="">
+           <img class="sushi"src="./img/Калифорния креветка-тобико.jpg" alt="">
           <p>Калифорния креветка-тобико - 400р</p>
           <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
         <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-            <img class="sushi" src="./img/мегафиш.jpg" alt="">
+            <img class="sushi"src="./img/мегафиш.jpg" alt="">
             <p>Мегафиш - 500р</p>
             <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
         <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-           <img class="sushi" src="./img/Мидяйка.jpg" alt="">
+           <img class="sushi"src="./img/Мидяйка.jpg" alt="">
            <p>Ролл месяца - "Мидяйка", 250 гр - 180р</p>
            <p><input class="submit" type="submit" value="Заказать"></p>
-           </p>
         </div>
            <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-           <img class="sushi" src="./img/Огами.jpg" alt="">
+           <img class="sushi"src="./img/Огами.jpg" alt="">
            <p>Огами - 450р</p>
            <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
            <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-           <img class="sushi" src="./img/сушиСалмон.jpg" alt="">
+           <img class="sushi"src="./img/сушиСалмон.jpg" alt="">
            <p>Салмон - 400р</p>
            <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
@@ -61,27 +59,27 @@
             <hr class="hr2">
         <div class="sushi-wrapper">
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-           <img class="sushi" src="./img/Филадельфия с авокадо.jpg" alt="">
+           <img class="sushi"src="./img/Филадельфия с авокадо.jpg" alt="">
            <p>Филадельфия с авокадо - 450</p>
            <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
            <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-           <img class="sushi" src="./img/Филадельфия с огурцом.jpg" alt="">
+           <img class="sushi"src="./img/Филадельфия с огурцом.jpg" alt="">
            <p>Филадельфия с огурцом - 415р</p>
            <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
            <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-           <img class="sushi" src="./img/Филадельфия с угрём (огурец).jpg" alt="">
+           <img class="sushi"src="./img/Филадельфия с угрём (огурец).jpg" alt="">
            <p>Филадельфия с угрём - 570р</p>
            <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
            <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-           <img class="sushi" src="./img/Филадельфия тунец.jpg" alt="">
+           <img class="sushi"src="./img/Филадельфия тунец.jpg" alt="">
            <p>Филадельфия тунец - 400р</p>
            <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
            <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-           <img class="sushi" src="./img/Макиугорь.jpg" alt="">
+           <img class="sushi"src="./img/Макиугорь.jpg" alt="">
            <p>Маки угорь - 370р</p>
            <p><input class="submit" type="submit" value="Заказать"></p>
                 </div>
@@ -91,27 +89,27 @@
                 <hr class="hr2">
             <div class="sushi-wrapper">
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-                <img class="sushi" src="./img/Комбо набор Хрустальный.jpg" alt="">
+                <img class="sushi"src="./img/Комбо набор Хрустальный.jpg" alt="">
                 <p>Набор "Хрустальный",1750 гр. - 1520 р</p>
                 <p><input class="submit" type="submit" value="Заказать"></p>
             </div>
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-                <img class="sushi" src="./img/Сет Ирония Судьбы.jpg" alt="">
+                <img class="sushi"src="./img/Сет Ирония Судьбы.jpg" alt="">
                 <p>Сет Ирония Судьбы , 1160 гр - 1150р</p>
                 <p><input class="submit" type="submit" value="Заказать"></p>
             </div>
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-                <img class="sushi" src="./img/сет матрица.jpg" alt="">
+                <img class="sushi"src="./img/сет матрица.jpg" alt="">
                 <p>Сет Матрица, 1420 гр. - 1300р</p>
                 <p><input class="submit" type="submit" value="Заказать"></p>
             </div>
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-                <img class="sushi" src="./img/Сет Рыбочка.jpg" alt="">
+                <img class="sushi"src="./img/Сет Рыбочка.jpg" alt="">
                 <p>Сет Рыбочка , 1800 гр - 1900р</p>
                 <p><input class="submit" type="submit" value="Заказать"></p>
             </div>
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-                <img class="sushi" src="./img/сет удовольствие.jpg" alt="">
+                <img class="sushi"src="./img/сет удовольствие.jpg" alt="">
                 <p>Сет Удовольствие, 1410 гр. - 1450р</p>
                 <p><input class="submit" type="submit" value="Заказать"></p>
             </div>
@@ -132,6 +130,6 @@
     </main>
     <br>
 <footer>Сайт создан в учебных целях!</footer>
-</div>    
+
 </body>
 </html>
