--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div>
         <div class="sushi-wrapper">
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-           <img class="sushi" src="./img/Калифорния креветка-тобико.jpg" alt="">
+           <img class="sushi" src="./img/Калифорниякреветка-тобико.jpg" alt="">
           <p>Калифорния креветка-тобико - 400р</p>
           <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
@@ -58,7 +58,7 @@
             <hr class="hr2">
         <div class="sushi-wrapper">
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-           <img class="sushi" src="./img/Филадельфия с авокадо.jpg" alt="">
+           <img class="sushi" src="./img/Филадельфиясавокадо.jpg" alt="">
            <p>Филадельфия с авокадо - 450</p>
            <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
@@ -68,12 +68,12 @@
            <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
            <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-           <img class="sushi" src="./img/Филадельфия с угрём (огурец).jpg" alt="">
+           <img class="sushi" src="./img/Филадельфиясугрём.jpg" alt="">
            <p>Филадельфия с угрём - 570р</p>
            <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
            <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-           <img class="sushi" src="./img/Филадельфия тунец.jpg" alt="">
+           <img class="sushi" src="./img/Филадельфиятунец.jpg" alt="">
            <p>Филадельфия тунец - 400р</p>
            <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
@@ -88,27 +88,27 @@
                 <hr class="hr2">
             <div class="sushi-wrapper">
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-                <img class="sushi" src="./img/Комбо набор Хрустальный.jpg" alt="">
+                <img class="sushi" src="./img/КомбонаборХрустальный.jpg" alt="">
                 <p>Набор "Хрустальный",1750 гр. - 1520 р</p>
                 <p><input class="submit" type="submit" value="Заказать"></p>
             </div>
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-                <img class="sushi" src="./img/Сет Ирония Судьбы.jpg" alt="">
+                <img class="sushi" src="./img/СетИронияСудьбы.jpg" alt="">
                 <p>Сет Ирония Судьбы , 1160 гр - 1150р</p>
                 <p><input class="submit" type="submit" value="Заказать"></p>
             </div>
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-                <img class="sushi" src="./img/сет матрица.jpg" alt="">
+                <img class="sushi" src="./img/сетматрица.jpg" alt="">
                 <p>Сет Матрица, 1420 гр. - 1300р</p>
                 <p><input class="submit" type="submit" value="Заказать"></p>
             </div>
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-                <img class="sushi" src="./img/Сет Рыбочка.jpg" alt="">
+                <img class="sushi" src="./img/СетРыбочка.jpg" alt="">
                 <p>Сет Рыбочка , 1800 гр - 1900р</p>
                 <p><input class="submit" type="submit" value="Заказать"></p>
             </div>
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-                <img class="sushi" src="./img/сет удовольствие.jpg" alt="">
+                <img class="sushi" src="./img/сетудовольствие.jpg" alt="">
                 <p>Сет Удовольствие, 1410 гр. - 1450р</p>
                 <p><input class="submit" type="submit" value="Заказать"></p>
             </div>
