--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img class="logo" src="./img/logo.png" alt="logo">
         </div>
             <div class="logo-loc">
-                <h1><span>АВТОР</span> <font>СУШИ</font></h1>
+                <h1><span>АВТОР</span> <span class="span-sushi">СУШИ</span></h1>
                 <br>
                     <nav class="nav-a">
                         <a href="./html/popular.html">Популярные</a>
@@ -63,7 +63,7 @@
            <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
            <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-           <img class="sushi" src="./img/Филадельфия с огурцом.jpg" alt="">
+           <img class="sushi" src="./img/Филадельфиясогурцом.jpg" alt="">
            <p>Филадельфия с огурцом - 415р</p>
            <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
