--- a/html/stocks.html
+++ b/html/stocks.html
@@ -14,9 +14,8 @@
         </div>
      <div class="header-wrapper">
          <header>
-           
             <div class="logo-loc">
-               <h1><font class="font1">АВТОР</font><font class="font2">СУШИ</font></h1><br>
+                <h1><span>АВТОР</span> <span class="span-sushi">СУШИ</span></h1>
                 <nav class="nav-a">
                 <a href="../index.html">На главную</a>
                 <a class="a-1" href="../html/popular.html">Популярные</a>
@@ -53,19 +52,19 @@
     <hr class="hr2">
     <div class="sushi-wrapper">
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-                <img class="sushi" src="../img/Комбо набор Хрустальный.jpg" alt="">
+                <img class="sushi" src="../img/КомбонаборХрустальный.jpg" alt="">
                 <p>Набор Хрустальный - 1520р</p>
                 <p class="stockss"><s>1850р</s> - 1520р</p>
                 <p><input class="submit" type="submit" value="Заказать"></p>
             </div>
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-                <img class="sushi" src="../img/сет матрица.jpg" alt="">
+                <img class="sushi" src="../img/сетматрица.jpg" alt="">
                 <p>Сет Матрица - 1300р</p>
                 <p class="stockss"><s>1750р</s> - 1300р</p>
                 <p><input class="submit" type="submit" value="Заказать"></p>
             </div>
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-                <img class="sushi" src="../img/сет удовольствие.jpg" alt="">
+                <img class="sushi" src="../img/сетудовольствие.jpg" alt="">
                 <p>Сет Удовольствие - 1450р</p>
                 <p class="stockss"><s>1850р</s> - 1450р</p>
                 <p><input class="submit" type="submit" value="Заказать"></p>
