--- a/html/popular.html
+++ b/html/popular.html
@@ -15,7 +15,7 @@
          <header>
              <div class="header-wrapper">
             <div class="logo-loc">
-                <h1><span>АВТОР</span><font>СУШИ</font></h1><br>
+                <h1><span>АВТОР</span> <span class="span-sushi">СУШИ</span></h1>
                     <nav class="nav-a">
                         <a href="../index.html">На главную</a>
                         <a class="a-1" href="../html/stocks.html">Акции</a>
@@ -46,7 +46,7 @@
        <p><input class="submit" type="submit" value="Заказать"></p>
     </div>
     <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-        <img class="sushi" src="../img/Комбо набор Хрустальный.jpg" alt="">
+        <img class="sushi" src="../img/КомбонаборХрустальный.jpg" alt="">
         <p> набор Хрустальный - 1520 р</p>
         <p><input class="submit" type="submit" value="Заказать"></p>
     </div>
@@ -56,22 +56,22 @@
                 <hr class="hr2">
             <div class="sushi-wrapper"> 
         <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-            <img class="sushi" src="../img/Сет Ирония Судьбы.jpg" alt="">
+            <img class="sushi" src="../img/СетИронияСудьбы.jpg" alt="">
             <p>Сет Ирония Судьбы - 1150р</p>
             <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
         <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-            <img class="sushi" src="../img/сет матрица.jpg" alt="">
+            <img class="sushi" src="../img/сетматрица.jpg" alt="">
             <p>Сет Матрица - 1300р</p>
             <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
         <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-            <img class="sushi" src="../img/Сет Рыбочка.jpg" alt="">
+            <img class="sushi" src="../img/СетРыбочка.jpg" alt="">
             <p>Сет Рыбочка - 1900р</p>
             <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
         <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-            <img class="sushi" src="../img/сет удовольствие.jpg" alt="">
+            <img class="sushi" src="../img/сетудовольствие.jpg" alt="">
             <p>Сет Удовольствие - 1450р</p>
             <p><input class="submit" type="submit" value="Заказать"></p>
        </div> 
