--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div>
         <div class="sushi-wrapper">
             <div style="border-left:3px solid yellow; padding-left:10px; border-right: 3px solid red; padding-right: 10px;">
-           <img class="sushi" src="./img/Калифорниякреветка-тобико.jpg" alt="">
+           <img class="sushi" src="./img/Калифорниякреветкатобико.jpg" alt="">
           <p>Калифорния креветка-тобико - 400р</p>
           <p><input class="submit" type="submit" value="Заказать"></p>
         </div>
